[package]
name = "steam-info-api"
version = "0.1.0"
edition = "2021"

[dependencies]
steam_api_concurrent = { path = "../steam_api_concurrent", version = "*" }
actix-web = { version = "4", default-features = false }
anyhow = { version = "1" }
dotenv = { version = "0" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
parking_lot = { version = "0" }
chrono = { version = "0" }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "rt",
    "macros",
    "parking_lot",
    "sync",
] }
futures = { version = "0" }
env_logger = { version = "0" }
thiserror = { version = "2" }
log = { version = "0" }
tracing = { version = "0", features = ["log"] }
